fixed header spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -37,7 +37,7 @@ h2 {
 @media (min-width: 375px) and (orientation: landscape) {
   h1 {
     font-size: 10em;
-    max-height: 130px;
+    max-height: 125px;
   }
   h2 {
     font-size: 3em;
